--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-blog-home.git"
     },
     "dependencies": {
+        "bcrypt": "^3.0.7",
         "bootstrap": "4.3.1",
         "jquery": "3.4.1"
     },
